build/yaml/samples/rule-out-rule-applied-to-with-dst-with-dup-port.yml
# DB
# first run
#  kubectl label ns db2 role=db
#  test: kubectl exec -ti web-ip -n web -- nc db-ip 3306 -v
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: db
  labels:
    role: db
spec:
  selector:
    matchLabels:
      role: db
  template:
    metadata:
      labels:
        role: db
    spec:
      containers:
        - image: "harbor-repo.vmware.com/dockerhub-proxy-cache/gophernet/netcat:latest"
          command: ["nc", "-l", "-p", "3306"]
          name: mysql
          ports:
            - containerPort: 3306
              name: mysql-port
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: db2
  labels:
    role: db
spec:
  selector:
    matchLabels:
      role: db
  template:
    metadata:
      labels:
        role: db
    spec:
      containers:
        - image: "harbor-repo.vmware.com/dockerhub-proxy-cache/gophernet/netcat:latest"
          command: ["nc", "-l", "-p", "3306"]
          name: mysql2
          ports:
            - containerPort: 3306
              name: mysql-port
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tcp-deployment
  namespace: web
spec:
  replicas: 2
  selector:
    matchLabels:
      role: web
  template:
    metadata:
      labels:
        role: web
    spec:
      hostname: web-deployment
      containers:
        - image: "harbor-repo.vmware.com/dockerhub-proxy-cache/gophernet/netcat:latest"
          command: ["nc", "-l", "-p", "12345"]
          name: mysql2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: web-port
---
apiVersion: nsx.vmware.com/v1alpha1
kind: SecurityPolicy
metadata:
  name: named-port-policy
  namespace: web
spec:
  priority: 10
  appliedTo:
    - podSelector:
        matchLabels:
          role: web
  rules:
    - direction: out
      action: allow
      appliedTo:
        - podSelector:
            matchLabels:
              role: web
      destinations:
        - podSelector:
            matchLabels:
              role: db
        - namespaceSelector:
            matchLabels:
              role: db
      ports:
        - protocol: TCP
          port: mysql-port
    - direction: in
      action: drop
    - direction: out
      action: drop
